# KernEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
Application/Lib/: CMakeLists.txt
Application/Lib/include/application/: AGameApplication.h  GuardedMain.h
Application/Lib/source/: AGameApplication.cpp
Application/Lib/source/app/: AGameApplication.cpp
Application/Lib/source/game/: AGameState.cpp  CGameObject.cpp  CGameSystem.cpp  CGameWorld.cpp  IController.cpp  IGameState.cpp
Application/Lib/source/io/: LoadGame.cpp
Application/Test/: CMakeLists.txt
Application/Test/source/: Main.cpp
Demo/CG2015/: CMakeLists.txt
Demo/CG2015/data/: startup.ini  startup.json
Demo/CG2015/data/audio/: Readme.txt
Demo/CG2015/data/material/: black.json  blue_glowing.json  brick_1.json  enemy.json  line_metal.json  metallic_galvanized.json  moss_1.json  mothership.json  sand.json  silver.json  silver_glowing.json  skybox_1.json  skybox_2.json  snow.json  stone_1.json  stone_lava.json  white.json  white_glowing.json
Demo/CG2015/data/model/: brick_cube.json  brick_sphere.json  bullet.json  moss_cube.json  moss_sphere.json  player_ship_1.json
Demo/CG2015/data/script/: main.lua
Demo/CG2015/data/shader/: display_pass.ini  shadow_cube_pass.ini
Demo/CG2015/data/world/: game_1.json  intro_1.json  load_1.json  load_2.json  lose.json  test_1.json  test_2.json  test_3.json  test_4.json  test_5.json  test_6.json  win.json
Demo/CG2015/source/: CDemoCG2015.cpp  CDemoCG2015.h  CEngine.cpp  CEngine.h  CFreeFlightCameraController.cpp  CFreeFlightCameraController.h  Engine.cpp  Engine.h  EngineConfig.cpp  EngineConfig.h  FreeFlightCameraController.cpp  FreeFlightCameraController.h  IEngine.h  Main.cpp  SEngineConfig.cpp  SEngineConfig.h
Demo/CG2015/source/control/: CCameraController.cpp  CCameraController.h  CHealthController.cpp  CHealthController.h  CLinearMovementController.cpp  CLinearMovementController.h  CPlayerMovementController.cpp  CPlayerMovementController.h  CRemoveOnDeathController.cpp  CRemoveOnDeathController.h  CRestrictPositionController.cpp  CRestrictPositionController.h  CSimpleWaypointController.cpp  CSimpleWaypointController.h  CWeaponController.cpp  CWeaponController.h  CameraController.cpp  CameraController.h  HealthController.cpp  HealthController.h  LinearMovementController.cpp  LinearMovementController.h  PlayerMovementController.cpp  PlayerMovementController.h  RemoveOnDeathController.cpp  RemoveOnDeathController.h  RestrictPositionController.cpp  RestrictPositionController.h  SimpleWaypointController.cpp  SimpleWaypointController.h  WeaponController.cpp  WeaponController.h
Demo/CG2015/source/state/: CDemoState.cpp  CDemoState.h  CGamePlayState.cpp  CGamePlayState.h  CLoadState.cpp  CLoadState.h  CLoseState.cpp  CLoseState.h  CTitleState.cpp  CTitleState.h  CWinState.cpp  CWinState.h  DemoState.cpp  DemoState.h  GamePlayState.cpp  GamePlayState.h  LoadState.cpp  LoadState.h  LoseState.cpp  LoseState.h  TitleState.cpp  TitleState.h  WinState.cpp  WinState.h
Demo/RTR2014/: CMakeLists.txt
Demo/RTR2014/data/: demo.ini
Demo/RTR2014/data/material/: brick_1_diffuse.ini  brick_1_diffuse.json  brick_1_diffuse_normal.ini  brick_1_diffuse_normal_specular.ini  brick_1_diffuse_specular.ini  cave_0.ini  duck_1_diffuse.ini  gear.ini  metal_1_diffuse_specular.ini  moss_1_diffuse.ini  moss_1_diffuse_normal.ini  moss_1_diffuse_normal_specular.ini  skybox.ini  stone_1_diffuse_normal.ini  stone_1_diffuse_normal_specular.ini  sword.ini  test_1.ini  white_glowing.json
Demo/RTR2014/data/scene/: load_1.json
Demo/RTR2014/data/shader/: compose_screenquad.ini  forward_test_0.ini  shader_display_overlay.ini  shader_display_text.ini  shadow_map_pass.ini
Demo/RTR2014/source/: CCameraController.cpp  CCameraController.h  CDemoRTR2014.cpp  CDemoRTR2014.h  CDemoRTR2014Application.h  CameraController.cpp  CameraController.h  Main.cpp  RTRDemo.cpp  RTRDemo.h
Demo/RTR2014/source/state/: CDemoState.cpp  CLoadState.cpp  CLoadState.h
Engine/Lib/: CMakeLists.txt
Engine/Lib/source/: Engine.cpp
Engine/Lib/source/app/: GameApplication.cpp
Engine/Lib/source/audio/: Sound.cpp  SoundEmitter.cpp  SoundListener.cpp  SoundManager.cpp  SoundSystem.cpp
Engine/Lib/source/foundation/: IniFile.cpp  JsonDeserialize.cpp  JsonUtil.cpp  StringUtil.cpp  Time.cpp  TimeStamp.cpp  TransformUtils.cpp  Transformer.cpp
Engine/Lib/source/game/: AGameState.cpp  GameObject.cpp  GameSystem.cpp  GameWorld.cpp  IGGameObjectController.cpp  IGameState.cpp  LoadGame.cpp
Engine/Lib/source/graphics/: ICamera.cpp  IGraphicsResourceManager.cpp  IGraphicsSystem.cpp  IRenderer.cpp  IScene.cpp  ISceneQuery.cpp  IWindow.cpp  Window.cpp
Engine/Lib/source/resource/: ImageLoader.cpp  LoadImage.cpp  LoadMaterial.cpp  LoadMesh.cpp  LoadModel.cpp  LoadShader.cpp  ResourceManager.cpp  SImage.cpp  SMaterial.cpp  SMesh.cpp  SModel.cpp  SShader.cpp
Foundation/Lib/: CMakeLists.txt
Foundation/Lib/source/app/: AApplication.cpp  CConsoleApplication.cpp  IApplication.cpp
Foundation/Lib/source/core/: CCoreSystem.cpp
Foundation/Lib/source/debug/: CDebugInfo.cpp  CLogToFileListener.cpp  CLogger.cpp  CProfiler.cpp  ELogLevel.cpp  ILogListener.cpp
Foundation/Lib/source/hash/: CCRC32Hasher.cpp  CMD5Hasher.cpp  CRC32.cpp  CRC32Util.cpp
Foundation/Lib/source/interface/: AInterface.cpp  AInterfaceHandler.cpp
Foundation/Lib/source/io/: CBinaryReader.cpp  CBinaryWriter.cpp  CConsole.cpp  CGameContentSystem.cpp  CIOInterface.cpp  CIOInterfaceHandler.cpp  CIOSystem.cpp  CIniFile.cpp  CMediaType.cpp  CObjModelLoader.cpp  CPathAlias.cpp  CPathAliasRegistry.cpp  CShaderPreprocessor.cpp  CTextReader.cpp  CTextResourceFile.cpp  CUniformResourceIdentifier.cpp  Deserialize.cpp  (+7 more)
Foundation/Test/: CMakeLists.txt
Foundation/Test/source/: Helper.h  Main.cpp
Graphics/Lib/: CMakeLists.txt
Graphics/Lib/source/: CDebugInfoDisplay.cpp  ICamera.cpp  IGraphicsResourceManager.cpp  IGraphicsSystem.cpp  IRenderer.cpp  IScene.cpp  ISceneQuery.cpp  IWindow.cpp
Graphics/Test/: CMakeLists.txt
Graphics/Test/source/: Main.cpp
(+776 files in other folders)
